--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <div class="container-1">
+        <div class="top-items"></div>
+        <div class="header"></div>
+    </div>
+    <div class="container-2">
+        <div class="content"></div>
+        <div class="cards"></div>
+    </div>
+    <div class="container-3"></div>
+        <div class="quote"></div>
+        <div class="author"></div>
+    <div class="container-4">
+        <div class="action">
+            <div class="content-2"></div>
+            <div class="button"></div>
+        </div>
+    </div>
+    <div class="footer"></div>
     
 </body>
 </html>
