--- a/index.html
+++ b/index.html
@@ -8,23 +8,46 @@
 </head>
 <body>
     <div class="container-1">
-        <div class="top-items"></div>
-        <div class="header"></div>
-    </div>
-    <div class="container-2">
-        <div class="content"></div>
-        <div class="cards"></div>
-    </div>
-    <div class="container-3"></div>
-        <div class="quote"></div>
-        <div class="author"></div>
-    <div class="container-4">
-        <div class="action">
-            <div class="content-2"></div>
-            <div class="button"></div>
+            <div class="top-items">
+                <div class="header">
+                    <div>Header Logo</div>
+                </div>
+                <div class="links">
+                    <div class="text">header link one</div>
+                    <div class="text">header link two</div>
+                    <div class="text">header link three</div>
+                </div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="container-2">
+        <div class="content">
+            This website is awesome <br>
+            This website has some subtext that goes here under the main title. It's a smaller font and  the color is lower contrast.
+        </div>
+        <div class="imagem">
+
+        </div>
+    </div>
+    <div class="container-3">
+        <div class="content-2">Some random information</div>
+        <div class="items">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+    </div>
+    <div class="container-4">
+        <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, o maybe people will actual read it. Who knows? All i know is that it looks nice. </div>
+        <div class="author"> - Thor, God of Thunder</div>
+    </div>
+    <div class="container-5">
+        <div class="action">
+            <div class="content-3">Call to action! It's time!<br> Sign up for our product by clicking that button right over there!</div>
+            <div class="button"> Sign up</div>
+        </div>
+    </div>
+    <div class="footer">Copyright © Heberty 2024</div>
     
 </body>
 </html>
