--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     </div>
     <div class="container-2">
         <div class="content">
-            This website is awesome <br>
+            <span class="main-hero">This website is awesome</span> 
             This website has some subtext that goes here under the main title. It's a smaller font and  the color is lower contrast.
+            <div class="button">Sign up</div>
         </div>
         <div class="imagem">
 
@@ -31,10 +32,22 @@
     <div class="container-3">
         <div class="content-2">Some random information</div>
         <div class="items">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card-information">
+                <div class="card"></div>
+                <div class="description">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card-information">
+                <div class="card"></div>
+                <div class="description">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card-information">
+                <div class="card"></div>
+                <div class="description">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card-information">
+                <div class="card"></div>
+                <div class="description">this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
     <div class="container-4">
