final adjustments and styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Landing Page</title>
 </head>
 <body>
@@ -22,15 +25,15 @@
     <div class="container-2">
         <div class="content">
             <span class="main-hero">This website is awesome</span> 
-            This website has some subtext that goes here under the main title. It's a smaller font and  the color is lower contrast.
+            <span class="second-hero">This website has some subtext that goes here under the main title. It's a smaller font and  the color is lower contrast.</span>
             <div class="button">Sign up</div>
         </div>
         <div class="imagem">
-
+        600x200
         </div>
     </div>
     <div class="container-3">
-        <div class="content-2">Some random information</div>
+        <div class="content-2">Some random information.</div>
         <div class="items">
             <div class="card-information">
                 <div class="card"></div>
@@ -51,16 +54,19 @@
         </div>
     </div>
     <div class="container-4">
-        <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, o maybe people will actual read it. Who knows? All i know is that it looks nice. </div>
+        <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actual read it. Who knows? All I know is that it looks nice. </div>
         <div class="author"> - Thor, God of Thunder</div>
     </div>
     <div class="container-5">
         <div class="action">
-            <div class="content-3">Call to action! It's time!<br> Sign up for our product by clicking that button right over there!</div>
-            <div class="button"> Sign up</div>
+            <div class="content-3">
+                <span class="header">Call to action! It's time!</span> <br>
+                Sign up for our product by clicking that button right over there!
+            </div>
+            <div class="action button"> Sign up</div>
         </div>
     </div>
-    <div class="footer">Copyright © Heberty 2024</div>
+    <div class="footer">Copyright © hebesant 2024</div>
     
 </body>
 </html>
